# GPU-middleware

./: .gitignore  eval.py  prototype.py  requirements.txt  run.py  test.py  train.py
IR/: executor.py  graph.py  onnx_parser.py
adapter/: __init__.py  base.py  call_trace.py  cpu.py  cuda.py  dcu.py  factory.py  np.py
config/: project_config.py
engine/: CMakeLists.txt  Readme.md
engine/DCU_engine/: CMakeLists.txt  Readme.md  bindings.cpp
engine/DCU_engine/include/: dcu_common.h  dcu_context.h  dcu_engine.h  dcu_global_kernel.h  dcu_op_kernel.h  dcu_tensor.h  device_array.h
engine/DCU_engine/include/dcu/: dcu_context.h  dcu_engine.h  dcu_tensor.h
engine/DCU_engine/include/dispatch/: miopen_traits.h
engine/DCU_engine/src/: dcu_context.cpp  dcu_engine.cpp  dcu_tensor.cpp  test_engine.cpp
engine/include/: context.h  dtype.h  engine.h  tensor.h
engine/include/dispatch/: dispatch.h  kernel_traits.h
gui/: main.py  test.py
gui/data/driver/: device.py  device_config.py  ssh_config.py
gui/data/enum/: device_type.py  ssh_type.py
gui/data/executor/: base.py  local_executor.py  ssh_executor.py
gui/performance/: time.json
gui/styles/: controlbar.qss  global.qss  sidebar.qss
gui/threads/: inference_thread.py
gui/ui/: main_window.py
gui/ui/pages/: inference_page.py  ir_page.py  performance_page.py
gui/ui/widgets/: control_bar.py  graph_view.py  log_panel.py  perf_panel.py  trace_gantt.py
gui/utils/: cmd_utils.py  device_utils.py  ssh_utils.py  style_utils.py
model/: model.py
models/: registry.py  torchvision_models.py
onnx/: mlp.onnx  onnx_exporter.py
operators/: __init__.py  activation.py  base.py  constant.py  conv.py  logical.py  math.py  nn.py  normalization.py  pooling.py  registry.py  shape.py  transform.py  type_cast.py
sh/: setup.sh
test/: GAP_test.py  add_broadcast_test.py  add_test.py  batchnorm2d_test.py  concat_test.py  conv2d_test.py  flatten_test.py  linear_test.py  logical_test.py  main.py  matmul_test.py  maxpool2d_test.py  relu_test.py  residual_block_test.py  tensor_test.py  test_engine.py  transform_test.py  typecast_test.py
trace/: trace.json
utils/: onnx_utils.py  trace.py
wrapper/: wrapper.py
